--- a/bab1-pendahuluan.tex
+++ b/bab1-pendahuluan.tex
@@ -2,6 +2,7 @@
 \chapter{\babSatu}
 %-----------------------------------------------------------------------------%
 
+\todo{Buat penjelasan singkat di Bab 1 ada apa aja}
 
 %-----------------------------------------------------------------------------%
 \section{Latar Belakang}
@@ -14,7 +15,9 @@ Untuk mengatasi permasalahan tersebut yang dihadapi oleh web semantik, diciptaka
 
 Untuk membantu para pengembang dalam mentranslasikan semantik ke dalam Zotonic, pada tahun 2016 terdapat sebuah penelitian terkait pembentukan otomatis aplikasi web dengan masukan berupa ontologi, yaitu penelitian terkait pemetaan ontologi yang dihasilkan semantik ke dalam struktur Zotonic (Pangukir el al., 2016). Namun, pada penelitian tersebut pembentukan bussiness logic dari web yang dibentuk masih secara manual. Hal ini karena pada ontologi tidak terdapat bussiness logic. Bussiness logic tersebut dapat diperoleh melalui translasi feature model dari rancangan web tersebut.
 
-Oleh karena itu, untuk menerapkan paradigma Software Product Line (SPL) dimana variasi dan kesamaan akan disusun secara modular dan reusability, diperlukan sebuah program yang akan melakukan pemetaan secara otomatis terhadap bussiness logic dari feature model yang telah dirancang ke dalam Zotonic. Sehingga diharapkan kedepannya, proses pembentukan web berbasis semantik dapat lebih mudah dan cepat agar meningkatkan jumlah web yang berbasis semantik.
+Oleh karena itu, untuk menerapkan paradigma Software Product Line (SPL) dimana variasi dan kesamaan akan disusun secara modular dan reusability, diperlukan sebuah program yang akan melakukan pemetaan secara otomatis terhadap bussiness logic dari feature model yang telah dirancang ke dalam Zotonic. Sehingga diharapkan kedepannya, proses pembentukan web berbasis semantik dapat lebih mudah dan cepat agar meningkatkan jumlah web yang berbasis semantik. \\
+
+\todo{Perdalam lagi latar belakang.}
 
 %-----------------------------------------------------------------------------%
 \section{Perumusan Masalah}
@@ -60,6 +63,8 @@ Sistematika penulisan laporan adalah sebagai berikut:
 	Bab 4 berisi penjelasan mengenai impelementasi yang dilakukan oleh penulis untuk membuat \textit{adaptor}. \\
 	
 	\item Bab 5 \babLima
+	
+	\todo{Jelasin bab 5 ngapain.}
 	
 	Bab 5 berisi hasil eksperimen yang telah dilakukan oleh penulis. \\
 	\item Bab 6 \babEnam
