--- a/bab3-rancangan.tex
+++ b/bab3-rancangan.tex
@@ -24,7 +24,13 @@ Menggunakan ontologi yang telah dirancang sebelumnya, ontologi tersebut akan dip
 
 Namun pada penelitian tersebut, pembuatan \textit{business logic} masih bersifat manual yang langsung ditaruh pada \textit{script} datatypepropertyMapper.sh. Pada penelitian ini, penulis akan membuat sebuah adaptor yang akan memanggil \textit{web service} sehingga \textit{business logic} pada zotonic akan lebih fleksibel karena memanfaatkan \textit{web service} serta memberikan kemudahan bagi \textit{developer} dalam hal melakukan modifikasi.
 %-----------------------------------------------------------------------------%
-\section{Desain \f{Adaptor}}
+\section{Rancangan \textit{Web Service}}
+%-----------------------------------------------------------------------------%
+
+	\todo{Jelasin gimana rancangan API nya.}
+
+%-----------------------------------------------------------------------------%
+\section{Rancangan \f{Adaptor}}
 %-----------------------------------------------------------------------------%
 
 Adaptor merupakan sebuah \textit{script} yang akan memanggil \textit{web service} sehingga dapat digunakan untuk melakukan pemrosesan \textit{business logic} pada zotonic. Bagaimana adaptor akan bekerja sehingga menghasilkan business logic dapat dilihat pada gambar berikut ini.
