--- a/bib.bib
+++ b/bib.bib
@@ -10,6 +10,17 @@
   url = {http://books.google.co.id/books?id=wrZQAAAAMAAJ}
 }
 
+
+@book{hopkins_powell_2015,
+	title={A Librarians Guide to Graphs, Data and the Semantic Web}, 
+	publisher={Elsevier Science},
+	year={2015},
+	author={Hopkins, Matthew and Powell, James},
+	isbn = {9781780634340},
+	pages = {31--43},
+	url={http://www.sciencedirect.com/science/book/9781843347538}
+} 
+
 @incollection{book.sterling-jones,
 	author = {Jones, James Patton and Lifka, David and Nitzberg, Bill and Tannenbaum, Todd},
 	editor={Sterling, T.L.},
@@ -85,6 +96,15 @@
 	pages = {521--551}
 }
 
+@inproceedings{paper.gruber,
+	author = {Thomas R. Gruber},
+	title = {Toward Principles for the Design of Ontologies Used for Knowledge Sharing},
+	pages = {907--928},
+	edition = {43},
+	publisher = {International Journal Human-Computer Studies},
+	year = {1993}
+}
+
 @inproceedings{paper.jackson,
 	author = {Jackson, David B. and Snell, Quinn and Clement, Mark J.},
 	title = {Core Algorithms of the Maui Scheduler},
@@ -117,6 +137,22 @@
   note = {[Diakses 20 Maret 2013]}
 }
 
+@MISC{owl.overview,
+	author = {OWL-Working-Group},
+	title = {OWL Web Ontology Language Overview},
+	howpublished = {\url{https://www.w3.org/TR/2004/REC-owl-features-20040210/}},
+	year = {2004},
+	note = {[Diakses 24 Mei 2017]}
+}
+
+@misc{zotonic.overview,
+	author = {Zotonic},
+	title = {Introduction - Developer Guide},
+	year = {n.d.},
+	howpublished = {\url{http://docs.zotonic.com/en/latest/developer-guide/introduction.html}},
+	note = {[Diakses 24 Mei 2017]}
+}
+
 @MISC{net.oxford,
   key = {Oxford Dictionaries},
   howpublished = {\url{http://oxforddictionaries.com/definition/english/parallel}},
@@ -138,6 +174,15 @@
     url = {http://csrc.nist.gov/publications/nistpubs/800-145/SP800-145.pdf},
     year = {2009},
     note = {[Diakses 17 April 2013]}
+}
+
+@TECHREPORT{ontologydevelopment,
+	author = {Natalya F. Noy and Deborah L. McGuinness},
+	edition = {SMI-2001-0880},
+	title = {Ontology Development 101: A Guide to Creating Your First Ontology},
+	organization = {Stanford Knowledge Systems Laboratory},
+	institution = {Stanford Medical Informatics},
+	year = {2001}
 }
 
 @misc{manual.rocks,
